--- a/xsys.vcxproj
+++ b/xsys.vcxproj
@@ -80,6 +80,7 @@
     <IntDir>.\Release\</IntDir>
     <IncludePath>C:\Users\liangar\develop\xos\include;C:\Users\liangar\develop\xos\oci\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\liangar\develop\xos\oci\lib\msvc;$(LibraryPath)</LibraryPath>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\Users\liangar\develop\xos\include;C:\Users\liangar\develop\xos\oci\include;$(IncludePath)</IncludePath>
@@ -164,6 +165,8 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <WholeProgramOptimization>true</WholeProgramOptimization>
       <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
+      <BasicRuntimeChecks>Default</BasicRuntimeChecks>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
